# PP3Code1.3

GridMapRegistration/: .cproject  .project  CMakeLists.txt
GridMapRegistration/src/: featureDetector.h  getMaps.h  main.cpp  utils.h
Matlab/: 0_-10.Mat  addBuffer.m  back_up.m  correlation.m  correlation_result.Mat  findLines.m  intersection.m  lines_edgy_ransac_depth.txt  main.m  matchWith2lines.m  match_lines.m  matching_main.m  plotResult.m  ransac.m  readLinesFile.m  results.Mat  tmp.m  untitled.fig  untitled7.m
clouds/: ._cloud3_10.ply  cloud0_-10.ply  cloud0_-20.ply  cloud0_0.ply  cloud0_10.ply  cloud0_20.ply  cloud1_-10.ply  cloud1_-20.ply  cloud1_0.ply  cloud1_10.ply  cloud1_20.ply  cloud2_0.ply  cloud2_20.ply  cloud3_-10.ply  cloud3_-20.ply  cloud3_10.ply
mex2/: CMakeLists.txt  test2.cpp
